feat: logoug endpoint added
